force-app/main/default/objects/CheckRequest__c/CheckRequest__c.object-meta.xml
<CustomObject>
    <description>Data Management Check Request</description>
    <label>Check Request</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>CheckRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>