force-app/main/default/objects/CheckRequest__c/fields/AMS_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>AMS_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by AMS Manager</label>
    <type>Checkbox</type>
</CustomField>