force-app/main/default/objects/CheckRequest__c/fields/Approved_by_AMS_Manager_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_AMS_Manager_Date__c</fullName>
    <label>Approved by AMS Manager Date</label>
    <type>Date</type>
</CustomField>