force-app/main/default/objects/CheckRequest__c/fields/Approved_by_Finance_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Finance_Date__c</fullName>
    <label>Approved by Finance Date</label>
    <type>Date</type>
</CustomField>