force-app/main/default/objects/CheckRequest__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <formula>IF(ISBLANK(Contact_ID__r.QAS_Mailing_POBox__c), 
(IF(ISBLANK(Contact_ID__r.Street_Number__c),&quot;&quot;,Contact_ID__r.Street_Number__c)+ 
IF(ISBLANK(Contact_ID__r.Street_Number_Suffix__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.Street_Number_Suffix__c)+
IF(ISBLANK(Contact_ID__r.Street_Name__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.Street_Name__c)+
IF(ISBLANK(Contact_ID__r.QAS_Mailing_Street_Type__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.QAS_Mailing_Street_Type__c)+IF(ISBLANK(Contact_ID__r.QAS_Mailing_Street_Direction__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.QAS_Mailing_Street_Direction__c)+
IF(ISBLANK(Contact_ID__r.QAS_Mailing_Unit_Type__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.QAS_Mailing_Unit_Type__c)+
IF(ISBLANK(Contact_ID__r.Unit__c),&quot;&quot;,&quot; &quot;+Contact_ID__r.Unit__c)),
Contact_ID__r.QAS_Mailing_POBox__c)

+&quot; &quot;+Contact_ID__r.City__c +&quot;, &quot;+  TEXT(Contact_ID__r.State__c)+&quot; &quot;+ Contact_ID__r.Zip__c +

IF(ISBLANK(Contact_ID__r.Zip_4__c),&quot;&quot;,&quot;-&quot;+Contact_ID__r.Zip_4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address</label>
    <type>Text</type>
</CustomField>