force-app/main/default/objects/CheckRequest__c/fields/Date_Check_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_Received__c</fullName>
    <label>Date Check Received</label>
    <type>Date</type>
</CustomField>