force-app/main/default/objects/CheckRequest__c/fields/Date_Check_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Check_Sent__c</fullName>
    <label>Date Check Sent</label>
    <type>Date</type>
</CustomField>