force-app/main/default/objects/CheckRequest__c/fields/Disapproved_by_AMS_Manager__c.field-meta.xml
<CustomField>
    <fullName>Disapproved_by_AMS_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disapproved by AMS Manager</label>
    <type>Checkbox</type>
</CustomField>