force-app/main/default/objects/CheckRequest__c/fields/Disapproved_By_Finance__c.field-meta.xml
<CustomField>
    <fullName>Disapproved_By_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disapproved By Finance</label>
    <type>Checkbox</type>
</CustomField>