force-app/main/default/objects/CheckRequest__c/fields/Disapproved_by_Finance_Date__c.field-meta.xml
<CustomField>
    <fullName>Disapproved_by_Finance_Date__c</fullName>
    <label>Disapproved by Finance Date</label>
    <type>Date</type>
</CustomField>