force-app/main/default/objects/CheckRequest__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Finance</label>
    <type>Checkbox</type>
</CustomField>