force-app/main/default/objects/CheckRequest__c/fields/Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>