force-app/main/default/objects/CheckRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Finance</fullName>
            </value>
            <value>
                <fullName>Approved by Manager</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Disapproved by Finance</fullName>
            </value>
            <value>
                <fullName>Disapproved By Manager</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready to send check</fullName>
            </value>
            <value>
                <fullName>Submitted For Finance Approval</fullName>
            </value>
            <value>
                <fullName>Submitted For Manager Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>