force-app/main/default/objects/CheckRequest__c/fields/Submitted_for_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Manager_Approval__c</fullName>
    <label>Submitted for Manager Approval</label>
    <type>Date</type>
</CustomField>