force-app/main/default/objects/CheckRequest__c/fields/Submitted_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Finance__c</fullName>
    <label>Submitted to Finance</label>
    <type>Date</type>
</CustomField>