force-app/main/default/objects/CheckRequest__c/listViews/gail_s_view.listView-meta.xml
<ListView>
    <fullName>gail_s_view</fullName>
    <columns>AccountName__c</columns>
    <columns>NAME</columns>
    <columns>Ready_for_Approval__c</columns>
    <columns>AMS_Manager_Approval__c</columns>
    <columns>Approved_by_Finance_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>gail&apos;s view</label>
</ListView>