force-app/main/default/objects/CheckRequest__c/listViews/Gail_s_view_of_check_requests.listView-meta.xml
<ListView>
    <fullName>Gail_s_view_of_check_requests</fullName>
    <columns>AccountName__c</columns>
    <columns>Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Payment_is_for__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Gail&apos;s view of check requests</label>
</ListView>